2014-02-12  Carl Hetherington  <cth@carlh.net>

	* Add dcpomatic_batch to OS X .app.

2014-02-11  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.12 released.

2014-02-11  Carl Hetherington  <cth@carlh.net>

	* Be more careful when catching exceptions from KDM creation.

2014-02-10  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.11 released.

2014-02-10  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.10 released.

2014-02-10  Carl Hetherington  <cth@carlh.net>

	* Try to fix Centos RPM dependencies.

	* Version 1.64.9 released.

2014-02-10  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.8 released.

2014-02-09  Carl Hetherington  <cth@carlh.net>

	* Build with a more careful version of libopenjpeg that handles
	out-of-memory conditions slightly better.

	* Possibly fix repeated no route to host errors in some cases.

	* Some small bits of increased low-memory stability.

	* Version 1.64.7 released.

2014-02-08  Carl Hetherington  <cth@carlh.net>

	* Fix exception when seeking with missing content (part of #317).

	* Version 1.64.6 released.

2014-02-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.5 released.

2014-02-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.4 released.

2014-02-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.3 released.

2014-02-08  Carl Hetherington  <cth@carlh.net>

	* Bump libdcp version to get some fixes for Interop XML.

2014-02-07  Carl Hetherington  <cth@carlh.net>

	* Add basic stuff to build RPMs for Centos.

2014-02-05  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.2 released.

2014-02-05  Carl Hetherington  <cth@carlh.net>

	* A variety of fixes to small problems found by Coverity.

2014-02-05  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.1 released.

2014-02-05  Carl Hetherington  <cth@carlh.net>

	* Updates to it_IT translation from William Fanelli.

2014-02-02  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.0 released.

2014-01-29  Carl Hetherington  <cth@carlh.net>
